# tars-agent

./: .env.example  .eslintrc.json  .gcloudignore  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  ROADMAP.md  SETUP.md  TASK_DESIGN.md  cleanup-images.sh  cloudbuild.yaml  deploy.sh  dev.sh  package.json  pyproject.toml  requirements.txt  test_task.py  tsconfig.json
backend/: Dockerfile  main.py  memory.py  requirements.txt  task.py  world_model.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
frontend/src/: app.ts  simulation.ts  types.ts
